feat: implement factory method pattern for lesson creation and add description field to lessons